# neuro-challange-chatbot

./: .env.example  .gitignore  PROJECT_STATUS.md  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml
notebooks/: analyzis.ipynb
scripts/: init_db.sql  load_data.py
src/: agent.py  config.py
src/tools/: database_query_tool.py  visualization_tool.py
src/utils/: business_dictionary.py  db_connection.py  gcs_uploader.py  sql_validator.py
tests/: README.md  conftest.py  test_retry_system.py  test_visualization_tool.py
tests/fixtures/: mock_llm_responses.json
tests/integration/: test_agent_trajectories.py  test_database_query_tool.py  test_visualization_tool.py
tests/unit/: test_business_dictionary.py  test_chart_detection.py  test_config.py  test_db_connection.py  test_formatting.py  test_gcs_uploader.py  test_sql_validator.py
