[project]
name = "neuro-challange-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.1",
    "pydantic>=2.12.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "ruff>=0.14.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
]
