[project]
name = "neuro-challange-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.2",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "langgraph-cli[inmem]>=0.4.4",
    "langsmith>=0.4.38",
    "pandas>=2.3.3",
    "psycopg>=3.2.12",
    "psycopg-binary>=3.2.12",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "sqlglot>=27.28.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "ruff>=0.14.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
]
